Fix MLModelTool returns null if the response of LLM is a pure json object (#2655)
* Fix MLModelTool returns null if the response of LLM is a pure json object

Signed-off-by: Heng Qian <qianheng@amazon.com>

* Fix UT failure

Signed-off-by: Heng Qian <qianheng@amazon.com>

* Avoid NPE

Signed-off-by: Heng Qian <qianheng@amazon.com>

* spotlessApply

Signed-off-by: Heng Qian <qianheng@amazon.com>

---------

Signed-off-by: Heng Qian <qianheng@amazon.com>
(cherry picked from commit 007b914b74850e6faec3645b6f3d8db2dc772563)